# curation

./: .gitignore  04d-02.csv  README.md  combined.csv  combinedCounty.csv  combinedState.csv  pyproject.toml  rename_map.csv  rename_map_2.csv  rename_map_3.csv  restServiceFields.csv
blt_fgdc/: Address_Point.xml  Address_Point_attributes.csv  Baltimore_Gateways.xml  Baltimore_Gateways_attributes.csv  Bus_stops.xml  Bus_stops_attributes.csv  City_Line.xml  Council_District.xml  Council_District_attributes.csv  MARC_Train.xml  MARC_Train_attributes.csv  Neighborhood_NSA.xml  Neighborhood_NSA_attributes.csv  Primary_SnowZones.xml  Primary_SnowZones_attributes.csv  Real_Property.xml  Real_Property_attributes.csv  Secondary_Snowzones.xml  Secondary_Snowzones_attributes.csv  Street_Centerline.xml  Street_Centerline_attributes.csv  Transportation_Sectors.xml  Transportation_Sectors_attributes.csv  Zoning.xml  Zoning_attributes.csv  bridge.xml  bridge_attributes.csv  bus_route.xml  bus_route_attributes.csv  lightrail.xml  lightrail_attributes.csv  lightrail_station.xml  lightrail_station_attributes.csv  subway.xml  subway_attributes.csv  subway_station.xml  subway_station_attributes.csv  zipcar_location.xml  zipcar_location_attributes.csv
data_dictionaries/: 2ft_contour_fields.csv  CENTERLINE_fields.csv  COMMUNITIES_fields.csv  ELECTION_PRECINCTS_fields.csv  MPLS_CITY_LIMITS_fields.csv  Neighborhoods_fields.csv  PARK_fields.csv  Planning_Primary_Zoning_fields.csv  Planning_Secondary_Zoning_fields.csv  WARDS_fields.csv  WATER_fields.csv
mpls2015/: mpls.csv
(+121 files in other folders)
